cros: Fix elipses in folder view.

Collapse whitespace when the FolderNameView loses focus.

Bug: 823238
Change-Id: I9695853e61fc201be0e37a808e4503ba9787e1d8
Reviewed-on: https://chromium-review.googlesource.com/969650
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544768}
Former-commit-id: 33ae92ea9d5db682c5ebe6ff8f2778920330d878